exports[`Toggler should render a default toggler 1`] = `
<div
  aria-hidden="true"
  class="terra-Toggler" />
`;

exports[`Toggler should render an animated toggler 1`] = `
<div
  aria-hidden="true"
  class="terra-Toggler is-animated">
  <div
    class="terra-Toggler-content">
    <div
      aria-hidden="false"
      class="rah-static"
      style="height:0px;overflow:hidden;">
      <div>
        Test
      </div>
    </div>
  </div>
</div>
`;

exports[`Toggler should render an open toggler 1`] = `
<div
  aria-hidden="false"
  class="terra-Toggler">
  Test
</div>
`;
